--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!-- Basic Page Needs
     ================================================== -->
         <meta charset="utf-8">
-        <title>Cypras-One page html5 template</title>
-        <meta name="description" content="">
+        <title>O Empreendedor Otimista</title>
+        <meta name="description" content=" Aqui você encontra as informações mais importantes sobre empreendedorismo, motivação, business e como alcançar o sucesso no mundo dos negócios.">
         <!-- Mobile Specific Metas
     ================================================== -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,7 +79,6 @@
          	 <ol class="carousel-indicators text-center">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
              </ol>
 
            	<div class="carousel-inner">
@@ -109,20 +108,6 @@
                	 		</div>
            	 		</div>
            	 	</div>
-           	 	<div class="item">
-                    <div class="overlay-slide">
-                        <img src="images/banner/p10.jpg" alt="" class="img-responsive">
-           	 		</div>
-           	 		<div class="carousel-caption">
-               	 		<div class="col-md-12 col-xs-12 text-center">
-                    <h2>Cyprass</h2>
-               	 			<h3 class="animated3"> We're crazy <b>coders</b></h3>
-               	 			<div class="line"></div>
-               	 			<p class="animated2"> way to success</p>
-               	 		</div>
-           	 		</div>
-           	 	</div>
-
            	 </div> 	 <!-- End Carousel Inner -->
 
             <!-- Controls -->
