Texto novo no navbar e painel animado
traduzi a nav bar e escrevi textos para o painle animado

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                  	<nav class="collapse navbar-collapse navigation" id="bs-example-navbar-collapse-1" role="navigation">
                         <ul class="nav navbar-nav navbar-right ">
                            	<li class="active"> <a href="#slider_part" class="page-scroll">Home </a></li>
-                            <li><a href="#service"  class="page-scroll">Services</a> </li>
+                            <li><a href="#service"  class="page-scroll">Serviços</a> </li>
                             <li><a href="#portfolio" class="page-scroll" >Portfolio</a> </li>
-                            <li><a href="#about" class="page-scroll">About Us </a> </li>
-                            <li><a href="#team" class="page-scroll">Our Team </a> </li>
+                            <li><a href="#about" class="page-scroll">Sobre Nós</a> </li>
+                            <li><a href="#team" class="page-scroll">Nosso Time</a> </li>
                             <li><a href="#blog" class="page-scroll">Blog</a> </li>
-                            <li><a href="#contact" class="page-scroll">Contact Us</a> </li>
+                            <li><a href="#contact" class="page-scroll">Fale conosco</a> </li>
                         </ul>
                      </nav>
                 </div><!-- /.container-fluid -->
@@ -88,10 +88,10 @@
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                      <h2>Cyprass</h2>
-               	 			<h3 class="animated2"> <b>Creative</b> Modern and clean </h3>
+                      <h2>EO</h2>
+               	 			<h3 class="animated2"> <b>Empreendedorismo </b> e Inovação </h3>
                	 			<div class="line"></div>
-               	 			<p class="animated3">Unique clean design</p>
+               	 			<p class="animated3"> Sua dose de conhecimento.</p>
                	 		</div>
            	 		</div>
            	 	</div>
@@ -101,10 +101,10 @@
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                    <h2>Cyprass</h2>
-               	 			<h3 class="animated3"> responsive <b>Flat </b>design</h3>
+                    <h2>EO</h2>
+               	 			<h3 class="animated3"> Motivação <b> Resiliência </b> e Sucesso</h3>
                	 			<div class="line"></div>
-               	 			<p class="animated2">best choice for you</p>
+               	 			<p class="animated2"> Sua mente turbinada.</p>
                	 		</div>
            	 		</div>
            	 	</div>
