--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Basic Page Needs
     ================================================== -->
         <meta charset="utf-8">
-        <title>O Empreendedor Otimista</title>
+        <title>JEO-Journalist Executive Officer</title>
         <meta name="description" content=" Aqui você encontra as informações mais importantes sobre empreendedorismo, motivação, business e como alcançar o sucesso no mundo dos negócios.">
         <!-- Mobile Specific Metas
     ================================================== -->
@@ -35,10 +35,6 @@
         <!-- Responsive -->
         <link rel="stylesheet" href="css/responsive.css" />
         <link rel="stylesheet" href="css/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-	
-		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-        <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,500' rel='stylesheet' type='text/css'>
 		
 		<!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
@@ -67,8 +63,8 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                      <h2>EO</h2>
-               	 			<h3 class="animated2"> <b>Empreendedorismo </b> e Inovação </h3>
+                      <h2>JEO</h2>
+               	 			<h3 class="animated2"> <b>Empreendedorismo </b> & Inovação </h3>
                	 			<div class="line"></div>
                	 			<p class="animated3"> Sem enrolação e sem mimi!</p>
                	 		</div>
@@ -76,7 +72,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	 	</div>
                 <div class="item">
                     <div class="overlay-slide">
-                        <img src="images/foto/m1.jpg" alt="" class="img-responsive">
+                        <img src="images/foto/m1_edit.jpg" alt="" class="img-responsive">
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
@@ -103,14 +99,13 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
     <!--/ Slider end -->
 
 <!-- Portfolio works Start -->
-
     <section id="portfolio" >
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="feature_header text-center">
                         <h3 class="feature_title">Nossos <b>Artigos:</b></h3>
-                        <h4 class="feature_sub"> Coletânea com os melhores ensinamentos, modelos, práticas, ideias e estratégias de negócios utilizadas por profissionais de sucesso no mundo todo.<br><br>Boa leitura!  </h4>
+                        <h4 class="feature_sub"> Criamos uma coletânea com os melhores ensinamentos, modelos, práticas, ideias e estratégias de negócios utilizadas por profissionais de sucesso no mundo todo.<br><br>Boa leitura!  </h4>
                         <div class="divider"></div>
                     </div>
                 </div>  <!-- Col-md-12 End -->
@@ -119,12 +114,13 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
 
 
     <div id="isotope-filter" class="skew3 text-center">
-        <a data-filter="*"  href="#" class="active ">All</a>
+        <a data-filter="*"  href="#" class="active ">Todos</a>
         <a data-filter=".identity"  href="#" class="">Empreendedorismo</a>
         <a data-filter=".web-design" href="#"  class="">Tecnologia & Inovação</a>
         <a data-filter=".graphic"  href="#" class="">Motivação</a>
        <!-- <a data-filter=".logo"  href="#" class="">Photography</a> -->
     </div>
+	
     <div class="clearfix"></div>
    			<div class="text-center ">
               <ul class="portfolio-wrap" id="portfolio_items">
@@ -286,7 +282,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="footer_bottom">
-                        <p class="text-block"> &copy; Copyright reserved to <span>Empreendedor Otimista </span></p>
+                        <p class="text-block"> &copy; Copyright reserved to <span>Journalist Executive Officer</span></p>
                     </div>
                 </div>
 			<!--
@@ -352,8 +348,6 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
         <script src="js/jquery.singlePageNav.js"></script>
       	<!-- Wow Animation -->
         <script type="js/javascript" src="js/wow.min.js"></script>
-        <!-- Google Map  Source -->
-        <script type="text/javascript" src="js/gmaps.js"></script>
 			 <!-- Custom js -->
         <script src="js/custom.js"></script>
 	    
