Alterações no CSS e edição de imagem.
Alterei o css responsivo para diminuir as bordas da imagem em carrosel
pois deixei a primeira imagem mais retangular como a segunda estava e
assim alinhei os dois textos e pontinhos de navegação corretamente.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	<div class="carousel-inner">
            	 	<div class="item active">
            	 		<div class="overlay-slide">
-           	 			<img src="images/foto/b1.jpg" alt="" class="img-responsive">
+           	 			<img src="images/foto/b1_edit.jpg" alt="" class="img-responsive">
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
