nova logo e texto
teste como logo nova no favicon e no título do carrousel, mudança de
nome do site.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Basic Page Needs
     ================================================== -->
         <meta charset="utf-8">
-        <title>JEO-Journalist Executive Officer</title>
+        <title>EN - Empreendedor Ninja</title>
         <meta name="description" content=" Aqui você encontra as informações mais importantes sobre empreendedorismo, motivação, business e como alcançar o sucesso no mundo dos negócios.">
         <!-- Mobile Specific Metas
     ================================================== -->
@@ -63,7 +63,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                      <h2>JEO</h2>
+                      <h2>EN <img src="images/logo/final/ninja_tie-icon.gif" alt="" ></img></h2>
                	 			<h3 class="animated2"> <b>Empreendedorismo </b> & Inovação </h3>
                	 			<div class="line"></div>
                	 			<p class="animated3"> Sem enrolação e sem mimi!</p>
@@ -76,7 +76,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                    <h2>EO</h2>
+                    <h2>EN <img src="images/logo/final/ninja_tie-icon.gif" alt="" ></img></h2>
                	 			<h3 class="animated3"> Motivação <b> Resiliência </b> e Foco</h3>
                	 			<div class="line"></div>
                	 			<p class="animated2"> Sua mente turbinada pro sucesso!</p>
@@ -282,7 +282,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="footer_bottom">
-                        <p class="text-block"> &copy; Copyright reserved to <span>Journalist Executive Officer</span></p>
+                        <p class="text-block"> &copy; Copyright reserved to <span>Empreendedor Ninja</span></p>
                     </div>
                 </div>
 			<!--
