Logo, Css e Mixpanel
atualização de logo, mudança no css responsivo tentando corrigir o
layout no mobile e inserção de código do mixpanel para testar se
funciona corretamente.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                      <h2>EN <img src="images/logo/final/ninja_tie-icon.gif" alt="" ></img></h2>
+							<img src="images/logo/final/ninja_tie-icon.gif" alt="" ></img>
                	 			<h3 class="animated2"> <b>Empreendedorismo </b> & Inovação </h3>
                	 			<div class="line"></div>
                	 			<p class="animated3"> Sem enrolação e sem mimi!</p>
@@ -76,7 +76,7 @@ mixpanel.init("a75b303ba663ad84643f436c7ddf37f3");</script><!-- end Mixpanel -->
            	 		</div>
            	 		<div class="carousel-caption">
                	 		<div class="col-md-12 col-xs-12 text-center">
-                    <h2>EN <img src="images/logo/final/ninja_tie-icon.gif" alt="" ></img></h2>
+							<img src="images/logo/final/ninja_tie-icon.gif" alt="" ></img>
                	 			<h3 class="animated3"> Motivação <b> Resiliência </b> e Foco</h3>
                	 			<div class="line"></div>
                	 			<p class="animated2"> Sua mente turbinada pro sucesso!</p>
